[package]
name = "embassy_experiment"
version = "0.1.0"
authors = ["Joshua Salzedo <joshuasalzedo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
nb = "0.1.3"

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "stm32f446"] # replace the model of your microcontroller here
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[dependencies.panic-probe]
version = "0.2.0"
features = ["rtt-target", "print-rtt"]

[dependencies.futures]
version = "0.3.13"
default-features = false
features = ["async-await"]

[dependencies.embassy]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.embassy-traits]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.embassy-stm32f4]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
features = ["stm32f446"]